--- a/index.html
+++ b/index.html
@@ -22,12 +22,12 @@
       }
     </style>
   </head>
+
   <body class="bg-dark">
     <div class="container">
       <div class="row">
         <div class="col-md-6 mx-auto">
           <div class="card card-body text-center mt-5">
-            <!-- <div class="card-body"> -->
             <h3 class="heading display-5 pb-3">Кредитный калькулятор</h3>
             <form id="loan-form">
               <div class="mb-3">
@@ -43,7 +43,7 @@
               </div>
               <div class="mb-3">
                 <div class="input-group">
-                  <span class="input-group-text" id="basic-addon1">%</span>
+                  <span class="input-group-text">%</span>
                   <input
                     id="interest"
                     type="number"
@@ -107,7 +107,6 @@
                 </div>
               </div>
             </div>
-            <!-- </div> -->
           </div>
         </div>
       </div>
